Reimplement relevant logic